changed patient follow up for better front end compatibility